overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -727,6 +727,8 @@ html,body {
   -webkit-box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36); 
   box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36);
   min-width: 43%;
+  max-height: 15rem;
+  overflow: hidden;
 }
 
 .projectteam-title {
